# agentic-debate

./: .gitignore  README.md  pyproject.toml
demo/: .gitignore  README.md  requirements.txt
demo/backend/: challenge_source.py  constants.py  director.py  gemini.py  main.py  observer.py  planning.py  prompts.py  protocol.py  session_store.py  streamer.py
demo/frontend/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
demo/frontend/src/: main.ts
demo/tests/: conftest.py  test_challenge_source.py  test_director.py  test_frontend_controls.py  test_gemini.py  test_intent.py  test_localization.py  test_main.py  test_protocol.py  test_session_store.py  test_streamer.py
docs/superpowers/plans/: 2026-03-31-debate-demo.md  2026-04-01-installable-planning-api.md  2026-04-03-cinematic-round-table-ui.md
docs/superpowers/specs/: 2026-03-31-debate-demo-design.md  2026-04-01-installable-planning-api-design.md  2026-04-03-cinematic-round-table-ui-design.md
src/agentic_debate/: __init__.py  compile.py  context.py  engine.py  errors.py  localization.py  protocols.py  result.py  spec.py  types.py
src/agentic_debate/llm/: __init__.py  base.py
src/agentic_debate/methods/: __init__.py  grouping.py  transcript.py
src/agentic_debate/observers/: __init__.py  base.py  composite.py  memory.py
tests/: conftest.py  test_context.py  test_engine_heuristic.py  test_engine_llm_single_judge.py  test_localization.py  test_observers.py  test_planning_llm.py  test_planning_types.py  test_readme_installable_flow.py  test_rounds_llm.py
(+53 files in other folders)
